Change log for duff
===================

Maintained since version 0.3.1.

2012-02-12  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffutil.c duff.h (PATH_SIZE_STEP): Added constant macro.
 * duff.1: Added documentation for -D flag.
 * dufffile.c (compare_files): Added logic for -D flag.
 * duff.c (main, usage): Added -D flag for limiting clusters to a single device.
 * duff.1: Various clarifications.

2012-01-28  Camilla Berglund  <elmindreda@elmindreda.org>

 * dufffile.c (compare_files): Removed superflous physical_flag test.
 * duff.h dufffile.c (init_file_list): Renamed from file_list_init.
 * duff.h dufffile.c (alloc_file): Renamed from file_list_alloc.
 * duff.h dufffile.c (file_list_empty): Renamed from empty_file_list.
 * duff.h dufffile.c (free_entry_list): Renamed from file_list_free.
 * duffdriver.c dufffile.c duffutil.c: Put non-static functions on top.
 * duffdriver.c (process_clusters): Initialized cluster index.
 * duffdriver.c (report_cluster): Made use of get_field_terminator.
 * duffutil.c (read_path): Made use of get_field_terminator.
 * duffutil.c (get_field_terminator): Added function.
 * duffutil.c (read_path): Removed limit on path length, updated signature.

2012-01-27  Camilla Berglund  <elmindreda@elmindreda.org>

 * dufffile.c (compare_entry_contents): Made warnings take -q into account.
 * dufffile.c (get_file_sample): Tagged file INVALID on read error.
 * dufffile.c (compare_file_digests): Replaced for-loop with memcmp.
 * dufffile.c (get_file_sample, get_file_digest): Replaced pointer checks with
 status checks.
 * duff.h (Status): Added SAMPLED and HASHED values.
 * duffdriver.c (process_clusters): Added test for whether base item has entered
 INVALID state.
 * dufffile.c (get_file_sample, get_file_digest): Removed duplicate check for
 INVALID state.

2012-01-25  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.h (Status): Removed unused DUPLICATE status.